--- a/landingpage.css
+++ b/landingpage.css
@@ -1,3 +1,246 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;900&display=swap');
+
+.light {
+    --maincolor: rgb(57, 235, 161);
+    --hovercolor:rgb(1, 64, 66);
+    --backgroundcolor: white;
+    --darkone:rgb(28, 179, 116);
+    --darktwo: rgb(240, 214, 214);
+    --lightone: rgb(83, 230, 250);
+    --lighttwo: rgb(204, 236, 219); 
+}
+
+*, 
+*::before, 
+*::after{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "poppins", sans-serif;
+    background-color: #333; /* Dark background color */
+
+}
+
+
+
+
+.bganimation{
+    position: absolute;
+    top: 0 ;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(25,1fr);
+    grid-template-rows: repeat(15,2fr);
+    background:transparent;
+    filter: saturate(2);
+    overflow: hidden;
+}
+
+.colorBox {
+    z-index: 110;
+    filter: brightness(1.1);
+    transition: 2s ease;
+    position: relative;
+    margin: 2px;
+    background: transparent;
+    clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+
+
+
+
+
+} 
+
+.colorBox:hover{
+    z-index: 120;
+    background: rgba(19, 235, 217, 0.479);
+    transition-duration: 0s;
+}
+
+
+
+
+
+
+
+.stop-scrolling{
+    height :100%;
+    overflow : hidden;
+        
+}
+img {
+    width: 100%;
+}
+
+a {
+    text-decoration: none;
+}
+
+.big-wrapper {
+    padding: 1.7rem 0 2rem;
+    width: 100%;
+    min-height: 100vh;
+    overflow: hidden;
+    background-image: url(nai3.avif);
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+
+
+    opacity: 0;
+    animation: fadeIn 2.5s ease-in-out forwards;
+}
+
+.container {
+    position: relative;
+    max-width: 81rem;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 3rem;
+    z-index: 10;
+}
+
+header {
+    position: relative;
+    z-index: 70;
+}
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+/* menu humbager */
+.overlay {
+    display: none;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.logo img {
+    width: 40px;
+    margin-right: .6rem;
+    margin-top: -0.6rem;
+}
+
+.logo h3 {
+    color: var(--darktwo);
+    font-size: 1.55rem;
+    line-height: 1.2;
+    font-weight: 700;
+}
+
+
+
+.links ul {
+    display: flex;
+    list-style: none;
+    align-items: center;
+
+}
+.links a {
+    color: var(--lighttwo);
+    margin-left: 4.5rem;
+    display: inline-block;
+    transition: 0.3s;
+}
+
+.links a:hover {
+    color: var(--hovercolor);
+    transform: scale(1.05);
+}
+
+
+
+.btn {
+    display: inline-block;
+    padding: 0.9rem 1.9rem;
+    color: white !important;
+    background-color: var(--maincolor);
+    border-radius: 16px;
+    text-transform: capitalize;
+    transition: .3s;
+}
+
+.btn:hover {
+    background-color: var(--hovercolor);
+    transform: scale(1) !important;
+}
+
+
+
+
+
+
+/* menu humbager */
+.humbager-menu {
+    position: relative;
+    z-index: 99;
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+
+.humbager-menu .bar {
+    position: relative;
+    width: 100%;
+    height: 3px;
+    background-color: var(--darktwo);
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.bar::before, 
+.bar::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--darktwo);
+    border-radius: 3PX;
+    transition: 0.5s;
+}
+
+.bar::before {
+    transform: translateY(-8px);
+}
+
+.bar::after {
+    transform: translateY(8px);
+}
+
+.big-wrapper.active .humbager-menu .bar{
+    background-color: transparent;
+}
+
+.big-wrapper.active .bar::before {
+    transform: translateY(0) rotate(-45deg);
+}
+
+.big-wrapper.active .bar::after {
+    transform: translateY(0) rotate(45deg);
+}
+
+/* menu humbager end */
+
+
+
+
+
 
 
 .showcase-area .container {
@@ -26,24 +269,6 @@ span {
     animation: bounce 1s ease-in-out infinite, changeText 4s linear infinite;
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -102,10 +327,6 @@ span {
 }
 
 
-
-
-
-
 .stars {
     position: fixed;
     top: 0;
@@ -129,32 +350,6 @@ span {
     50% { opacity: 1; transform: translateY(-5px); }
     100% { opacity: 0; transform: translateY(0); }
   }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
