--- a/index.css
+++ b/index.css
@@ -493,4 +493,122 @@ span {
 }
 
     
+@media screen and (max-width: 870px) {
+
+.humbager-menu{
+    display: flex;
+}
+
+.links{
+    position: fixed;
+    top: 0%;
+    right: 0;
+    max-width: 450px;
+    width: 100%;
+    height: 100%;
+    background-color: var(--maincolor);
+    z-index: 95;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 50px 2px rgba(15, 0, 0, 0.342);
+    transform: translateX(100%);
+    transition: 0.5s;
+
+}
+
+.links ul{
+    flex-direction: column;
+}
+
+.links a{
+  color: white; 
+  margin-left: 0;
+  padding: 2rem 0;
+}
+
+.links .btn {
+    background:none;
+}
+.overlay {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.212);
+    opacity: 0;
+    pointer-events: none;
+
+}
+
+.big-wrapper.active .links {
+    transform: translateX(0);
+    box-shadow: 0 0 50px 2px rgba(0, 0, 0, 0.486);
+}
+.big-wrapper.active .overlay {
+    pointer-events: all;
+    opacity: 1;
+}
+
+.showcase-area {
+    padding: 2.5rem 0;
+    max-width: 700px;
+    margin: 0 auto;
+}
+ 
+.showcase-area .container {
+    grid-template-columns: 1fr;
+    justify-content: center;
+    grid-gap: 2rem;
+}
+
+.big-title {
+    font-size: 1.1rem;
+}
+
+.text {
+    font-size: .95rem;
+    margin: 1.4rem 0 1.5rem;
+}
+.person {
+    width: 100%;
+    transform: none;
+}
+.logo h3 {
+   font-size: 1.25rem; 
+}
+
+.shape{
+    bottom: -180px;
+    left: -150px;
+}
+
+
+
+}
+
+@media screen and (max-width: 450px) {
+.container {
+    padding: 0 1.5rem;
+
+}
+.big-title {
+    font-size: 0.9;
+}
+h1 {
+    font-size: 1.5rem; /* Adjust the font size as needed */
+    margin: 10px 0;
+}
+.text {
+    margin: 1.1em 0 1.5rem;
+}
+.showcase-area .btn {
+    font-size: 0.8rem;
+    }
+
+}
+
+    
 
