--- a/index.css
+++ b/index.css
@@ -21,8 +21,7 @@
 
 body {
     font-family: "poppins", sans-serif;
-    background-color: #333; /* Dark background color */
-
+    background-image: url(nai3.avif); 
 }
 
 .stop-scrolling{
@@ -43,7 +42,7 @@ a {
     width: 100%;
     min-height: 100vh;
     overflow: hidden;
-   background-image: url(nai3.avif); 
+  /* background-image: url(nai3.avif); */
     background-size: cover;
     display: flex;
     flex-direction: column;
