--- a/index.css
+++ b/index.css
@@ -22,6 +22,7 @@
 body {
     font-family: "poppins", sans-serif;
     background-image: url(nai3.avif); 
+    background-size: cover;
 }
 
 .stop-scrolling{
@@ -43,7 +44,7 @@ a {
     min-height: 100vh;
     overflow: hidden;
   /* background-image: url(nai3.avif); */
-    background-size: cover;
+  /*  background-size: cover;*/
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -127,15 +128,13 @@ header .container {
     background-color: var(--maincolor);
     border-radius: 16px;
     text-transform: capitalize;
-    transition: .3s;
+    transition: .4s;
 }
 
 .btn:hover {
     background-color: var(--hovercolor);
-    transform: scale(1) !important;
+    transform: scale(1.5) !important;
 }
-
-
 
 
 
