--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ body {
     background-size: cover;
 }
 
-.stop-scrolling{
+.stop-scrolling {
     height :100%;
     overflow : hidden;
         
@@ -129,7 +129,7 @@ header .container {
 
 .btn:hover {
     background-color: var(--hovercolor);
-    transform: scale(1.5) !important;
+    transform: scale(1) !important;
 }
 
 
@@ -241,6 +241,13 @@ span {
 .showcase-area .btn {
     box-shadow: 0 0 25px 1px rgba(0, 0, 0, 0.05) ;
 }
+
+.showcase-area .btn:hover {
+    background-color: var(--hovercolor);
+    transform: scale(1) !important;
+}
+
+
 .person {
     z-index: 1;
     width: 123%;
