--- a/index.css
+++ b/index.css
@@ -338,6 +338,24 @@ span {
 }
 
 
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-20px);
+    }
+    60% {
+        transform: translateY(-10px);
+    }
+}
+
+@keyframes changeText {
+    0%, 50% {
+        color: rgb(42, 235, 235); /* First color */
+    }
+
+}
 
 
 
