--- a/index.css
+++ b/index.css
@@ -383,17 +383,17 @@ span {
 
 }
 
-@keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-        transform: translateY(0);
+@keyframes swipeIn {
+    from {
+        opacity: 0;
+        transform: translateX(-20px);
     }
-    40% {
-        transform: translateY(-20px);
-    }
-    60% {
-        transform: translateY(-10px);
+    to {
+        opacity: 1;
+        transform: translateX(0);
     }
 }
+
 
 
 
