--- a/index.css
+++ b/index.css
@@ -375,23 +375,23 @@ span {
 }
 
 
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+
+
 
 @keyframes changeText {
     0%, 50% {
         color: rgb(42, 235, 235); /* First color */
     }
 
-}
-
-@keyframes swipeIn {
-    from {
-        opacity: 0;
-        transform: translateX(-20px);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
 }
 
 
